--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	      INGLÉS
 	    </div>
 	    <div class="skill_progress">
-	    <span style="width: 95%;"></span>
+	      <span style="width: 95%;"></span>
 	    </div>
-		 <div class="skill_per">95%</div>
+	    <div class="skill_per">95%</div>
 	   </li>
            <li>
              <div class="skill_name">
@@ -137,7 +137,7 @@
             <li>
               <div class="desc">Reparación y mantenimiento de computadoras</div>
               <div class="info">
-                <p>Mantenimiento y reparación de PCs y notebooks, instalación y administración de sistemas operativos Windows, Linux para particulares.</p>
+                  <p>Mantenimiento y reparación de PCs y notebooks, instalación y administración de sistemas operativos Windows, Linux para particulares.</p>
               </div>
             </li>
         </ul>
@@ -156,7 +156,31 @@
             </li>
         </ul>
     </div>
-    <div class="cv_item cv_hobby">
+
+     <div class="cv_item cv_referencia">
+      <div class="title">
+           <p class="bold">Referencias</p>
+         </div>
+      <ul>
+            <li>
+                <div class="desc">Referencias Personales</div>
+                <div class="info">
+                  <p class="semi-bold">Sra. Gladys Franco</p>
+                  <p>Celular</p>
+	          <p>0981 544330</p>
+                </div>
+            </li>
+	    <li>
+                <div class="desc">Referencias Profesionales</div>
+                <div class="info">
+                  <p class="semi-bold">Sr. José Falcón</p>
+                  <p>Celular</p>
+		  <p>0982 375137</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+     <div class="cv_item cv_hobby">
       <div class="title">
            <p class="bold">Hobbies</p>
          </div>
